<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shake Music</string>
    <string name="ComposeActivity">Compose</string>
    <string name="PlayActivity">Play Music</string>
    <string name="Instructions">Instructions</string>
    <string name="Language">Language</string>
    <string name="Exit">Exit</string>
    <string name="Voice">Listen to Instructions</string>
    <string name="recButtonStart">Record</string>
    <string name="recButtonStop">Stop recording</string>
    <string name="introduceData">Type the name of the music file:</string>
    <string name="save">Save recording</string>
    <string name="InstructionListen">Music Shake application uses the accelerometer to produce music. You can shake your android phone or device and compose music. Keep your phone on your hand. Be careful not to drop it when you shake it. Shake in different directions as shown in the figure below and enjoy the sound of the guitar.</string>
    <string name="bTextListen">Listen to Instructions</string>
    <string name="Instr">Music Shake application uses the accelerometer to produce music. You can shake your android phone or device and compose music. Keep your phone on your hand.</string>
    <string name="Instr1">Be careful not to drop it when you shake it. Shake in different directions as shown in the figure below and enjoy the sound of the guitar.</string>
    <string name="OK">OK</string>
    <string name="summary">Click here to choose the language you want.</string>
    <string name="titleLang">Personalize your phone!</string>

</resources>