<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/instr"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_weight="0.00"
        android:text="@string/Instr" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/instr"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/Instr1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="158dp"
        android:src="@drawable/accelerometer" />

    <Button
        android:id="@+id/bVoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Listen"
        android:text="@string/bTextListen" />

    <Button
        android:id="@+id/bOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ExitInstruction"
        android:text="@string/OK" />

</LinearLayout>